Fix grid cell spacing at 'about me' section.

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -23,6 +23,7 @@
             grid-template-columns: 1fr 1fr;
             padding: 0 2rem;
         }
+        grid-row-gap: 2rem;
         margin-bottom: 6rem;
         .item {
             span {
